JumpScript/tests/baselines/reference/project/jsFileCompilationDifferentNamesSpecified/node/jsFileCompilationDifferentNamesSpecified.errors.txt
error TS6054: File 'DifferentNamesSpecified/b.js' has unsupported extension. The only supported extensions are '.jump', '.jmpx', '.d.jump'.
DifferentNamesSpecified/jmpconfig.json(2,24): error TS6082: Only 'amd' and 'system' modules are supported alongside --out.


!!! error TS6054: File 'DifferentNamesSpecified/b.js' has unsupported extension. The only supported extensions are '.jump', '.jmpx', '.d.jump'.
==== DifferentNamesSpecified/jmpconfig.json (1 errors) ====
    {
      "compilerOptions": { "out": "test.js" },
                           ~~~~~
!!! error TS6082: Only 'amd' and 'system' modules are supported alongside --out.
      "files": [ "a.jump", "b.js" ]
    }
==== DifferentNamesSpecified/a.jump (0 errors) ====
    var test = 10;